k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voice-bbs
spec:
  selector:
    app: voice-bbs
  ports:
    - port: 80
      targetPort: 4000
  type: ClusterIP
